HELLODATA-1762 - fix unsupported operation ex